--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e36a7bf
+	base = 5a3cc2b
 	trimbase = 
 	parent = debian/kinetic/spqrel_navigation
-	previous = 
+	previous = e36a7bf
