--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4320424
+	base = c64712d
 	trimbase = 
 	parent = release/kinetic/spqrel_navigation
-	previous = 
+	previous = 4320424
